--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 	<title>My Portfolio</title>
 	<!-- Linking CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- Linking Google Fonts -->
 	<link rel="stylesheet" type="text/css"
 	      href="https://fonts.googleapis.com/css?family=Montserrat">
 </head>
@@ -43,9 +44,9 @@
     	<section id="social-links">
       		<h3>Connect with Me</h3>
       		<ul>
-      			<li><a href="https://github.com/Meggin"><img class="icon"  src="assets/images/github-128.png" alt="GitHub Profile"></a></li>
-        		<li><a href="https://www.linkedin.com/in/meggin-kearney-553b3373"><img class="icon"  src="assets/images/square-linkedin-128.png" alt="LinkedIn Profile"></a></li>
-        		<li><a href="http://stackoverflow.com/users/2145598/meggin-kearney"><img class="icon"  src="assets/images/stackoverflow.png" alt="StackOverflow Profile"></a></li>
+      			<li class="left-align"><a href="https://github.com/Meggin"><img class="icon"  src="assets/images/github-128.png" alt="GitHub Profile"></a></li>
+        		<li class="left-align"><a href="https://www.linkedin.com/in/meggin-kearney-553b3373"><img class="icon"  src="assets/images/square-linkedin-128.png" alt="LinkedIn Profile"></a></li>
+        		<li class="left-align"><a href="http://stackoverflow.com/users/2145598/meggin-kearney"><img class="icon"  src="assets/images/stackoverflow.png" alt="StackOverflow Profile"></a></li>
       		</ul>
     	</section>
 	</div>
